--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 <div id="info">
 
       <h3>Contact Information</h3>
-      <label for="Phone">Phone:</label> <input name="Phone" type="text"><br>
-      <label for="Email">Email:</label> <input name="Email" type="text"><br>
-      <label for="Address">Address:</label> <input name="Address" type="text"><br>
-     <label for="Place of Birth">Place of Birth:</label> <input name=Place of Birth" type="text"><br />
+      <label for="Phone">Phone:</label> <label for="Phone">0781773250</label><br>
+      <label for="Email">Email:</label> <label for="Email">victor.muwanga@gmail.com</label><br>
+      <label for="Address">Address:</label>   <label for="Address">Kireka</label><br>
+     <label for="Place of Birth">Place of Birth:</label> <label for="Place of Birth">Kampala</label><br />
 
   </div>
 
