applied bootstrap partially

--- a/index.html
+++ b/index.html
@@ -1,21 +1,53 @@
 <form>
   <head>
 <title>Profile</title>
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="information.css" />
+
+
+
 </head>
 
-  <div id="topnav">
- <a href="#welcome section">Welcome</a>
- <a href="#info">Contact</a>
- <a href="#education">Education</a>
- <a href="#employment">Employment</a>
- <a href="#Skills">Skills</a>
- <a href="#Projects">Projects</a>
-  <a href="#profile link">Accounts</a>
-</div>
+<div class="container" >
+    <body class="bg">
+      <nav class="navbar   navbar-expand-lg">
+             <a href="#" class="navbar-brand">My Portfolio</a>
+             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                 <span class="navbar-toggler-icon"></span>
+             </button>
+             <div class="collapse navbar-collapse" id="navbarCollapse">
+                 <ul class="navbar-nav ml-auto">
+                     <li class="navbar-item">
+                         <a href="#welcome section" class="nav-link">Welcome</a>
+                     </li>
+                     <li class="navbar-item">
+                         <a href="#info" class="nav-link">Contact</a>
+                     </li>
+                     <li class="navbar-item">
+                         <a href="#education" class="nav-link">Education</a>
+                     </li>
+                     <li class="navbar-item">
+                         <a href="#employment" class="nav-link">Employment</a>
+                     </li>
+                     <li class="navbar-item">
+                         <a href="#Skills" class="nav-link">Skills</a>
+                     </li>
+                     <li class="navbar-item">
+                         <a href="#Projects" class="nav-link">Projects</a>
+                     </li>
+                     <li class="navbar-item">
+                         <a href="#profile link" class="nav-link">Accounts</a>
+                     </li>
+                 </ul>
+             </div>
+         </nav>
 
-    <body>
-<h1 id="welcome section">MUWANGA VICTOR</h1>
+
+
+
+
+
+ <strong><h1 id="welcome section"><span style = "color:#8866ff;">MUWANGA VICTOR</span></h1><strong>
 <img src="IMG_20190301_185014.jpg" alt=IMG_20190301_185014.jpg" width="150" height="150">
 
 
@@ -33,8 +65,8 @@
   <div id="education">
 
 
-   <h3>Education Section</h3>
-   <table border="1">
+  <em> <h3>Education Section</h3></em>
+   <table border="1" class="table table-bordered">
      <thead>
        <th>School</th>
        <th> Year Attended</th>
@@ -56,8 +88,8 @@
  <div id="employment">
 
 
-    <h3> Employment History</h3>
-    <table border="1">
+  <em>  <h3> Employment History</h3></em>
+    <table border="1" class="table table-bordered">
       <thead>
         <th>Jobs</th>
         <th> Duration of work</th>
@@ -78,8 +110,8 @@
 <div id="Skills">
 
 
-     <h3>Skills Section</h3>
-     <table border="1">
+     <em><h3>Skills Section</h3></em>
+     <table border="1" class="table table-bordered" >
        <thead>
          <th>Name of SKill</th>
          <th> Rating Out of 10</th>
@@ -94,7 +126,7 @@
 </div>
 
     <div id="Projects">
-      <h3> Projects</h3>
+      <em><h3> Projects</h3></em>
       <ul>
         <div class="project-tile"><li>Git</li></div>
         <li> <a href="https://github.com/Mubeezi/studentform.html/blob/master/studentform.html">Html</a></li>
@@ -102,11 +134,12 @@
       </ul>
     </div>
 
-     <div id="profile link">
-<h3>Links Section</h3>
+     <div id="profilelink">
+ <em><h3>Links Section</h3></em>
      <a href="https://github.com/Mubeezi/Cohort1-2019">Github</a><br>
      <a href="http://www.facebook.com">Facebook</a><br>
     </div>
-       </body>
+</div>
 
+       </body>
     </form>
