contact information arranged in a card

--- a/index.html
+++ b/index.html
@@ -48,18 +48,25 @@
 
 
  <strong><h1 id="welcome section"><span style = "color:#8866ff;">MUWANGA VICTOR</span></h1><strong>
-<img src="IMG_20190301_185014.jpg" alt=IMG_20190301_185014.jpg" width="150" height="150">
+
 
 
 
 <div id="info">
-
+  <div class="card text-grey bg-secondary"  style="width: 18rem;" padding  text-center>
+    <div class="card-header">
       <h3>Contact Information</h3>
-      <label for="Phone">Phone:</label> <label for="Phone">0781773250</label><br>
-      <label for="Email">Email:</label> <label for="Email">victor.muwanga@gmail.com</label><br>
-      <label for="Address">Address:</label>   <label for="Address">Kireka</label><br>
-     <label for="Place of Birth">Place of Birth:</label> <label for="Place of Birth">Kampala</label><br />
-
+  </div>
+     <img class="card-img-top" src="IMG_20190301_185014.jpg" alt="IMG_20190301_185014.jpg" width="150" height="150>
+   <div class="card-body">
+<ul class="list-group list-group-flush bg-secondary" >
+    <li class="list-group-item">  <label for="Phone">Phone:</label> <label for="Phone">0781773250</label></li>
+    <li class="list-group-item">  <label for="Email">Email:</label> <label for="Email">victor.muwanga@gmail.com</label></li>
+    <li class="list-group-item">  <label for="Address">Address:</label>   <label for="Address">Kireka</label></li>
+     <li class="list-group-item"><label for="Place of Birth">Place of Birth:</label> <label for="Place of Birth">Kampala</label></li>
+</ul>
+ </div>
+   </div>
   </div>
 
   <div id="education">
