README.md modified

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </div>
      <img class="card-img-top" src="IMG_20190301_185014.jpg" alt="IMG_20190301_185014.jpg" width="150" height="150>
    <div class="card-body">
-<ul class="list-group list-group-flush bg-secondary" >
+<ul class="list-group list-group-flush " >
     <li class="list-group-item">  <label for="Phone">Phone:</label> <label for="Phone">0781773250</label></li>
     <li class="list-group-item">  <label for="Email">Email:</label> <label for="Email">victor.muwanga@gmail.com</label></li>
     <li class="list-group-item">  <label for="Address">Address:</label>   <label for="Address">Kireka</label></li>
